--- a/package.json
+++ b/package.json
@@ -16,18 +16,19 @@
   },
   "dependencies": {
     "@contentful/rich-text-html-renderer": "^15.11.1",
-    "gatsby-plugin-manifest": "^5.0.0",
-    "gatsby-source-contentful": "^8.0.0",
     "@fontsource/dm-mono": "^4.5.9",
     "@fontsource/dm-sans": "^4.5.8",
+    "@gatsby-cloud-pkg/merlin-synchronizer": "../merlin-synchronizer",
     "@vanilla-extract/babel-plugin": "^1.2.0",
     "@vanilla-extract/css": "^1.9.0",
     "@vanilla-extract/css-utils": "^0.1.2",
     "@vanilla-extract/webpack-plugin": "^2.1.12",
     "gatsby": "^5.0.0",
     "gatsby-plugin-image": "^3.0.0",
+    "gatsby-plugin-manifest": "^5.0.0",
     "gatsby-plugin-sharp": "^5.0.0",
     "gatsby-plugin-vanilla-extract": "^4.0.1",
+    "gatsby-source-contentful": "^8.0.0",
     "gatsby-source-filesystem": "^5.0.0",
     "gatsby-transformer-sharp": "^5.0.0",
     "is-absolute-url": "^4.0.1",
@@ -41,10 +42,10 @@
     "contentful-cli": "^1.15.3",
     "contentful-import": "^8.3.2",
     "gatsby-provision-contentful": "^0.0.5",
-    "inquirer": "^8.2.0",
-    "yargs-parser": "^21.0.0",
-    "prettier": "2.5.1",
     "husky": "^7.0.4",
-    "lint-staged": "^12.3.5"
+    "inquirer": "^8.2.0",
+    "lint-staged": "^12.3.5",
+    "prettier": "2.5.1",
+    "yargs-parser": "^21.0.0"
   }
 }
