--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@contentful/rich-text-html-renderer": "^15.11.1",
     "@fontsource/dm-mono": "^4.5.9",
     "@fontsource/dm-sans": "^4.5.8",
+    "@gatsby-cloud-pkg/merlin-synchronizer": "^0.3.6",
     "@vanilla-extract/babel-plugin": "^1.2.0",
     "@vanilla-extract/css": "^1.9.0",
     "@vanilla-extract/css-utils": "^0.1.2",
