--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@fontsource/dm-mono": "^4.5.9",
     "@fontsource/dm-sans": "^4.5.8",
     "@gatsby-cloud-pkg/merlin-synchronizer": "^0.3.6",
+    "@netlify/plugin-gatsby": "^3.4.9-merlin.1",
     "@vanilla-extract/babel-plugin": "^1.2.0",
     "@vanilla-extract/css": "^1.9.0",
     "@vanilla-extract/css-utils": "^0.1.2",
